# advent-of-code-2025

./: .gitignore  Cargo.toml  Justfile
day-01/: Cargo.toml
day-01/benches/: benchmark.rs
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/benches/: benchmark.rs
day-02/src/: lib.rs  part1.rs  part1_multiple_of.rs  part2.rs  part2_matason.rs  part2_matason_alt.rs  part2_multiple_of.rs
day-03/: Cargo.toml
day-03/benches/: benchmark.rs
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/benches/: benchmark.rs
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/benches/: benchmark.rs
day-05/src/: lib.rs  part1.rs  part1_matason.rs  part1_matason_alt.rs  part2.rs
day-06/: Cargo.toml
day-06/benches/: benchmark.rs
day-06/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-07/benches/: benchmark.rs
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: benchmark.rs
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/benches/: benchmark.rs
day-09/src/: part1.rs
day-10/: Cargo.toml
day-10/benches/: benchmark.rs
day-10/src/: part1.rs
day-11/: Cargo.toml
day-11/benches/: benchmark.rs
day-11/src/: part1.rs
day-12/: Cargo.toml
day-12/benches/: benchmark.rs
template/: Cargo.toml
template/benches/: benchmark.rs
template/src/: part2.rs
