[package]
name = "day-08"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
dhat = { workspace = true }
divan = { workspace = true }
glam = { workspace = true }

[[bin]]
name = "day-08--part1"
path = "src/bin/part1.rs"

[[bin]]
name = "day-08--part2"
path = "src/bin/part2.rs"

[features]
dhat-heap = []
bench = []

[[bench]]
name = "benchmark"
harness = false

[lints]
workspace = true
